--- a/src/ble5_simple_peripheral_cc2640r2lp_app/.settings/org.eclipse.core.resources.prefs
+++ b/src/ble5_simple_peripheral_cc2640r2lp_app/.settings/org.eclipse.core.resources.prefs
@@ -20,3 +20,24 @@ encoding//FlashROM_StackLibrary/TOOLS/subdir_vars.mk=UTF-8
 encoding//FlashROM_StackLibrary/makefile=UTF-8
 encoding//FlashROM_StackLibrary/objects.mk=UTF-8
 encoding//FlashROM_StackLibrary/sources.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Drivers/ECC/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Drivers/ECC/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Drivers/TRNG/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Drivers/TRNG/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/ICall/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/ICall/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/ICallBLE/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/ICallBLE/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/PROFILES/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/PROFILES/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Startup/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Startup/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/TOOLS/defines/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/TOOLS/defines/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/TOOLS/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/TOOLS/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/makefile=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/objects.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/sources.mk=UTF-8
