Feature: add E-Ink driver and test (Annotate some code in simple_peripheral due to the code out of flash).

--- a/src/ble5_simple_peripheral_cc2640r2lp_app/.settings/org.eclipse.core.resources.prefs
+++ b/src/ble5_simple_peripheral_cc2640r2lp_app/.settings/org.eclipse.core.resources.prefs
@@ -20,6 +20,10 @@ encoding//FlashROM_StackLibrary/TOOLS/subdir_vars.mk=UTF-8
 encoding//FlashROM_StackLibrary/makefile=UTF-8
 encoding//FlashROM_StackLibrary/objects.mk=UTF-8
 encoding//FlashROM_StackLibrary/sources.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/Fonts/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/Fonts/subdir_vars.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/GUI/subdir_rules.mk=UTF-8
+encoding//FlashROM_StackLibrary_RCOSC/Application/GUI/subdir_vars.mk=UTF-8
 encoding//FlashROM_StackLibrary_RCOSC/Application/subdir_rules.mk=UTF-8
 encoding//FlashROM_StackLibrary_RCOSC/Application/subdir_vars.mk=UTF-8
 encoding//FlashROM_StackLibrary_RCOSC/Drivers/ECC/subdir_rules.mk=UTF-8
